samples/_failures_safe/1761127070_e63803_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_522f0a74.c: In function ‘tokenize’:
./samples/SAFE/__tmp_522f0a74.c:158:13: error: expected declaration or statement at end of input
  158 |             advance = strlen(token->value);
      |             ^~~~~~~
./samples/SAFE/__tmp_522f0a74.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_522f0a74.c:158:13: error: expected declaration or statement at end of input
